# flyfunboarding

./: .gitignore  .htaccess  LICENSE  PKPass.php  README.md  api.php
api/: index.php  samples.php
app/: .gitignore
bugreport/: .gitignore  autoload.php  bugreport.php  config_bugreport.sample.php  list.php  new.php  sql_helper.php
designs/: IMPLEMENTATION_PLAN.md  INDEX.md  MIGRATION_DESIGN.md  deployment.md  droplet-migration-plan.md  ios-server-contract.md  server-architecture.md
etc/: config.sample.php
pages/: airports.php  boardingpass.php  disclaimer.php  disclaimer_de.html  disclaimer_en.html  disclaimer_en.php  disclaimer_en.txt  disclaimer_fr.html  disclaimer_fr.php  disclaimer_fr.txt  (+4 more)
server/: .env.docker.example  .env.sample  .gitignore  AUTH_EXPLANATION.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
server/app/: __init__.py  config.py  dependencies.py  main.py
server/app/core/: __init__.py  exceptions.py  localization.py
server/app/database/: __init__.py  connection.py  repository.py  tables.py
server/app/models/: __init__.py  aircraft.py  airline.py  airport.py  base.py  flight.py  passenger.py  settings.py  stats.py  ticket.py
server/app/routers/: __init__.py  aircraft.py  airline.py  airport.py  boarding_pass.py  flight.py  pages.py  passenger.py  settings.py  status.py  ticket.py
server/app/schemas/: __init__.py  aircraft.py  airline.py  airport.py  flight.py  passenger.py  settings.py  ticket.py
server/app/services/: __init__.py  airport_service.py  boarding_pass_service.py  signature_service.py
server/templates/: boarding_pass.html  boarding_pass_card.html
server/templates/disclaimers/: disclaimer_en.html  disclaimer_es.html  disclaimer_fr.html
server/tests/: __init__.py  conftest.py  test_aircraft_endpoints.py  test_airline_endpoints.py  test_airport_endpoints.py  test_boarding_pass_endpoints.py  test_connection.py  test_flight_endpoints.py  test_passenger_endpoints.py  test_settings_endpoints.py  test_status_endpoints.py  test_ticket_endpoints.py
(+149 files in other folders)
