[project]
name = "flyfun-boarding-api"
version = "1.0.0"
description = "Fly Fun Boarding API - FastAPI backend"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Fly Fun Boarding", email = "dev@flyfunboarding.com"}
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy>=2.0.36",     # Using SQLAlchemy Core (query building), not full ORM
    "aiomysql>=0.2.0",        # Async MySQL driver

    # Data Validation & Serialization
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # PKPass Generation
    "passes-rs-py>=0.1.0",    # Rust-based, high-performance PKPass library

    # Cryptography
    "cryptography>=44.0.0",

    # Utilities
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",

    # Language Detection & Templates
    "babel>=2.16.0",          # Internationalization with Accept-Language parsing
    "jinja2>=3.1.4",          # HTML template engine for web pages

    # HTTP Client (for health checks, external APIs)
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",          # For async testing
    "ruff>=0.8.0",            # Fast Python linter
    "mypy>=1.13.0",           # Type checking
]

[project.scripts]
flyfun-api = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]  # Common rules + import sorting

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"  # All tests share same event loop
testpaths = ["tests"]

